# stricto

./: .coveragerc  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/source/: api_reference.rst  conf.py  errors.rst
stricto/: __init__.py  acl.py  acls.py  bool.py  dict.py  error.py  event.py  extend.py  filter.py  float.py  generic.py  in_type.py  int.py  list.py  list_and_tuple.py  permissions.py  selector.py  string.py  toolbox.py  tuple.py
stricto/extended/: email.py  ip_address.py  ip_network.py  url.py
tests/: __init__.py  test_acl.py  test_acls.py  test_bool.py  test_date.py  test_dict.py  test_diff.py  test_email.py  test_error.py  test_event.py  test_float.py  test_int.py  test_ipaddress.py  test_ipnetwork.py  test_kparse.py  test_list.py  test_meta.py  test_rights.py  test_selectors.py  test_string.py  test_toolbox.py  test_tuple.py  test_url.py  test_view.py
