[project]
name = "stricto"
version = "0.2.2"
authors = [
    { name="Bertrand Wallrich", email="Bertrand.Wallrich@inria.fr" },
]
description = "Strict Dict (json) with schema validation embedded"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[dependency-groups]
dev = [
    "black",
    "coverage",
    "pylint",
]

[project.urls]
GitHub = "https://github.com/backo-stricto/stricto"
Homepage = "https://github.com/backo-stricto/stricto"
Issues = "https://github.com/backo-stricto/stricto/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
